<resources>
    <string name="app_name">Parstagram</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="log_in">Log in</string>
    <string name="instagram">Instagram</string>
    <string name="parstagram">Parstagram</string>
    <string name="text_favorites">Favorites</string>
    <string name="text_schedules">Schedules</string>
    <string name="text_music">music note</string>
    <string name="home">Home</string>
    <string name="post">Post</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="add_a_comment">Add a comment…</string>
    <string name="likes">%d Likes</string>
    <string name="view_all">View all %d comments</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="like_button">Like Button</string>
    <string name="comment_button">Comment Button</string>
    <string name="share_button">Share Button</string>
</resources>