<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_home"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_house_24"
        android:title="@string/home"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_compose"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_add_24"
        android:title="@string/post"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_profile"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_person_outline_24"
        android:title="@string/profile"
        app:showAsAction="ifRoom" />
</menu>